Custom bone shapes appear only one sided #39070

Closed
opened 2014-03-09 17:48:27 +01:00 by Szymon Buhajczuk · 9 comments

System Information
Windows 7 x64. GTX580

Blender Version
Broken: 2.69.0 Official (r60995) & 2.70RC1 (Hash: 19f7f9a)

Short description of error
When assigning 2D objects with faces (not wire objects) such as a plane to be a custom bone shape, it only is visible (in viewport) from one side. Even if "Double Sided Normals" is selected.

Exact steps for others to reproduce the error

Start Blender with default scene.
Add armature --> Single Bone
Add Mesh --> Plane
Go to the bone properties, and assign the plane as a custom shape.
The plane itself (as an object) displays double sided but the plane representing the bone appears only one sided.
Turning on "Double Sided" under mesh Normals doesn't help.

Also tested it with other objects like a hemisphere (UV sphere with half its vertices removed)

**System Information** Windows 7 x64. GTX580 **Blender Version** Broken: 2.69.0 Official (r60995) & 2.70RC1 (Hash: 19f7f9a) **Short description of error** When assigning 2D objects with faces (not wire objects) such as a plane to be a custom bone shape, it only is visible (in viewport) from one side. Even if "Double Sided Normals" is selected. **Exact steps for others to reproduce the error** Start Blender with default scene. Add armature --> Single Bone Add Mesh --> Plane Go to the bone properties, and assign the plane as a custom shape. The plane itself (as an object) displays double sided but the plane representing the bone appears only one sided. Turning on "Double Sided" under mesh Normals doesn't help. Also tested it with other objects like a hemisphere (UV sphere with half its vertices removed)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SzymonBuhajczuk

Added subscriber: @SzymonBuhajczuk
Sergey Sharybin self-assigned this 2014-03-10 12:03:24 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Developer note:
This is a side effect of optimization which does backface culling for armatures. The idea here would be to:

  • Always do backface culling if there's no custom shape
  • If there's custom shape do backface culling if it's enabled in view3d settings.

@brecht, does it sound good for you?

Developer note: This is a side effect of optimization which does backface culling for armatures. The idea here would be to: - Always do backface culling if there's no custom shape - If there's custom shape do backface culling if it's enabled in view3d settings. @brecht, does it sound good for you?

Sounds good.

Sounds good.

This issue was referenced by blender/blender-addons-contrib@df5cbfb625

This issue was referenced by blender/blender-addons-contrib@df5cbfb6253b10763375e3c86e827a1a34700231

This issue was referenced by df5cbfb625

This issue was referenced by df5cbfb6253b10763375e3c86e827a1a34700231

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit df5cbfb625.

Closed by commit df5cbfb625.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39070
No description provided.