Fix T39070: Custom bone shapes appear only one sided

The idea is simple -- only enable culling for bones if they're not using
custom shape or if culling is enabled in shading panel.